[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Piero Maddaleni"]
description = "Modules for easy and scalable web servers."
license = "Apache-2.0"
name = "piemadd-modules"
version = "0.1.0"
[tool.poetry.dependencies]
pytest = "^6.1.2"
pytest-runner = "^5.2"
python = "^3.8"
setuptools = "^50.3.2"
twine = "^3.2.0"
wheel = "^0.35.1"
flask = "^1.1.2"
[tool.poetry.dev-dependencies]
flask = "^1.1.2"
